# OpenCLWorkingVersion

./: CMakeLists.txt  CMakeLists.txt.user.c6de104  hello.cl  main.cpp
